--- a/AISpring2/pom.xml
+++ b/AISpring2/pom.xml
@@ -106,7 +106,7 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<version>1.2.17.</version>
 		</dependency>
 	
 		<!-- mysql connector -->
